--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     </div>
                     <div class="contact-item">
                         <span class="icon">📞</span>
-                        <a href="tel:+919070514679">+91-9070514679</a>
+                        <a href="tel:+">+91-</a>
                     </div>
                     <div class="contact-item">
                         <span class="icon">🌐</span>
@@ -252,5 +252,6 @@
 
     <script src="script.js"></script>
 </body>
+
 
 </html>
