--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     </div>
                     <div class="contact-item">
                         <span class="icon">📞</span>
-                        <a href="tel:+">+91-</a>
+                        <a href="tel:+919070514679">+91-9070514679</a>
                     </div>
                     <div class="contact-item">
                         <span class="icon">🌐</span>
@@ -101,14 +101,34 @@
                     </div>
                 </div>
                 <ul class="achievements">
-                    <li>Led secure authentication and real-time data solutions for enterprise clients</li>
-                    <li>Architected scalable backend systems with .NET Core and Azure services</li>
-                    <li>Spearheaded client communication and technical documentation for seamless delivery</li>
+                    <li>Architected a backend integration system connecting a technician geolocation mobile app
+                        with the enterprise CRM, leveraging Azure Service Bus (ASB) for decoupled, reliable messaging.
+                        The solution captured real-time technician location and login metadata, enabling seamless
+                        synchronization and operational visibility across field and support teams</li>
+                    <li>Architected and maintained over 35+ backend middleware interfaces for a
+                        major European commercial vehicle manufacturer, using .NET and Azure technologies.
+                        Played a pivotal role in integrating complex enterprise systems, ensuring high availability,
+                        scalability, and secure data exchange across global operations. Demonstrated end-to-end
+                        ownership—from interface design and implementation to deployment and support—while serving
+                        as the primary knowledge authority across the entire middleware landscape.</li>
+                    <li>Led the design and implementation of secure authentication and real-time data solutions
+                        for enterprise clients, integrating OAuth 2.0, OpenID Connect, and scalable messaging
+                        architectures to ensure robust access control and low-latency data delivery across distributed
+                        systems.</li>
+                    <li>Architected scalable, cloud-native backend systems using .NET Core and Azure services,
+                        leveraging microservices, Azure Functions, App Services, and Service Bus to ensure
+                        high availability, fault tolerance, and seamless integration across distributed enterprise
+                        applications.</li>
+                    <li>Spearheaded client communication and authored comprehensive technical documentation,
+                        ensuring seamless project delivery, clear stakeholder alignment, and smooth knowledge
+                        transfer across development and support teams. </li>
                     <li>Redesigned the API architecture and resolved a critical design flaw causing message loss to
                         Azure Service Bus (ASB), ensuring reliable message delivery with a <strong>31%
                             improvement</strong></li>
-                    <li>Redesigned the API router for message delivery with non-blocking retry mechanism, improving
-                        system resilience by <strong>70%</strong> for specific endpoints</li>
+                    <li>Redesigned the API router for message delivery by implementing a non-blocking retry mechanism,
+                        significantly improving system resilience by <strong>70%</strong> for latency-sensitive
+                        endpoints affected by
+                        third-party infrastructure issues</li>
                     <li>Integrated Azure Application Insights and Log Analytics for centralized telemetry and real-time
                         monitoring</li>
                     <li>Led comprehensive upgrade of Map Services by modernizing HERE Maps integration, transitioning to
@@ -117,9 +137,18 @@
                         and MSAL</li>
                     <li>Designed and developed a scalable URL shortening service and real-time service vehicle
                         availability system</li>
+                    <li>Achieved 100% automated deployment across all components by implementing a robust CI/CD
+                        pipeline,
+                        significantly enhancing release velocity, reducing manual errors, and transforming development
+                        and operations into a streamlined, DevOps-driven workflow</li>
+                    <li>Implemented a secure credential management system using Azure Key Vault, enhancing security
+                        and compliance while simplifying credential management and access control</li>
+                    <li>Optimized deployment strategies for .NET Core applications, resulting in <strong>30%</strong>
+                        reduction in deployment time and <strong>25%</strong> increase in deployment frequency</li>
+                    <li>Developed a scalable and secure authentication system using OAuth 2.0 with OpenID Connect (OIDC)
+                        and MSAL</li>
                 </ul>
             </div>
-
             <!-- Promaze Solutions -->
             <div class="card experience-card">
                 <div class="experience-header">
@@ -135,7 +164,8 @@
                     <li>Developed ASP.NET Core MVC web applications using Dapper ORM and SQL Server 2019</li>
                     <li>Revamped legacy FM Radio scheduling system by migrating to .NET Core 5.0</li>
                     <li>Overhauled GST filing system for major banking client, reducing filing errors by
-                        <strong>45%</strong></li>
+                        <strong>45%</strong>
+                    </li>
                     <li>Built nationwide stock and return flow system for FM broadcasting client</li>
                     <li>Designed business software for Kashmiri craft exporters, resulting in <strong>7% sales
                             increase</strong></li>
@@ -220,9 +250,10 @@
             </h2>
             <div class="card">
                 <ul class="certifications-list">
-                    <li>Microsoft Certified: Azure Solutions Architect Expert</li>
-                    <li>AWS Certified Developer – Associate</li>
-                    <li>Secure Software Development Lifecycle (SSDLC) Training</li>
+                    <li>GitHub Copilot for Developers</li>
+                    <li>Infosys Certified Secure Software Development Lifecycle (SSDLC)</li>
+                    <li>Infosys Certified .Net Microservices Developer</li>
+                    <li>Infosys Certified Applied Generative AI Professional</li>
                 </ul>
             </div>
         </section>
@@ -235,6 +266,7 @@
             </h2>
             <div class="card">
                 <div class="interests-grid">
+                    <div class="interest-tag">Architecting & Designing</div>
                     <div class="interest-tag">Branding & Etymology in Tech</div>
                     <div class="interest-tag">Developer Documentation & Publishing</div>
                     <div class="interest-tag">Cloud Cost Optimization</div>
@@ -252,6 +284,5 @@
 
     <script src="script.js"></script>
 </body>
-
 
 </html>
