--- a/index.html
+++ b/index.html
@@ -38,7 +38,14 @@
                     </div>
                     <div class="contact-item">
                         <span class="icon">🌐</span>
-                        <span>LinkedIn | GitHub | Portfolio</span>
+                        <span>
+                            <a href="https://www.linkedin.com/in/faisalbinsyed/" target="_blank"
+                                rel="noopener noreferrer">LinkedIn</a> |
+                            <a href="https://github.com/faisalandrabi" target="_blank"
+                                rel="noopener noreferrer">GitHub</a> |
+                            <a href="https://faisalandrabi.is-a.dev/" target="_blank"
+                                rel="noopener noreferrer">Portfolio</a>
+                        </span>
                     </div>
                 </div>
             </div>
