--- a/index.html
+++ b/index.html
@@ -82,7 +82,8 @@
                     <div class="competency-item">MySQL, SQL Server, Database Design</div>
                     <div class="competency-item">Docker, CI/CD, DevOps Practices</div>
                     <div class="competency-item">Secure Credential & Secrets Management</div>
-                    <div class="competency-item">Entity Framework</div>
+                    <div class="competency-item">BlackDuck</div>
+                    <div class="competency-item">SonarQube</div>
                     <div class="competency-item">Product Strategy & Technical Documentation</div>
                 </div>
             </div>
@@ -291,5 +292,6 @@
 
     <script src="script.js"></script>
 </body>
+
 
 </html>
