Fix HTML structure and formatting issues

--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
                 <div class="education">
                     <h3 class="degree">Bachelor of Science in Information Technology</h3>
                     <p class="school">Sikkim Manipal University, India</p>
-                    <p class="education-info">📅 Apr 2012 - Apr 2023 &nbsp; 📍 India</p>
+                    <p class="education-info">📅 Apr 2012 📍 India</p>
                 </div>
             </section>
         </div>
@@ -342,5 +342,6 @@
         <p>© 2025 Faisal Andrabi. All rights reserved.</p>
     </footer>
 </body>
+
 
 </html>
