Few more changes

--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Faisal Andrabi - Senior .NET Consultant & Subject Matter Expert">
-    <title>Faisal Andrabi - Senior .NET Consultant & SME</title>
+    <meta name="description"
+        content="Faisal Andrabi -  Senior .NET Consultant | Enterprise Integration Architect | Cloud-Native Systems Expert">
+    <title>Faisal Andrabi - Senior .NET Consultant | Enterprise Integration Architect | Cloud-Native Systems Expert
+    </title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,11 +18,12 @@
 <body>
     <!-- Header Section -->
     <header class="header">
-        <div class="profile-photo">
+        <!-- <div class="profile-photo">
             <div class="photo-circle">FA</div>
-        </div>
+        </div> -->
         <h1 class="name">FAISAL ANDRABI</h1>
-        <p class="job-title">Senior .NET Consultant & Subject Matter Expert</p>
+        <p class="job-title"> Senior .NET Consultant | Enterprise Integration Architect | Cloud-Native Systems Expert
+        </p>
         <div class="contact-bar">
             <span class="contact-item">📧 faisalbinsyed@gmail.com</span>
             <span class="contact-item">📞 +91-9070514679</span>
@@ -61,33 +64,40 @@
                         </div>
                     </div>
                     <ul class="job-responsibilities">
-                        <li>Architected a backend integration system linking a technician geolocation app with
-                            enterprise CRM via Azure Service Bus, enabling real-time location and login sync for field
-                            and support teams</li>
-                        <li>Led 35+ backend middleware interfaces for a major European commercial vehicle manufacturer
-                            using .NET and Azure, ensuring high availability, scalability, and secure global data
-                            exchange. Owned full lifecycle delivery and served as the middleware SME</li>
-                        <li>Designed secure authentication and real-time data flows using OAuth 2.0, OpenID Connect, and
-                            scalable messaging to ensure robust access control and low-latency delivery across
-                            distributed systems</li>
-                        <li>Built cloud-native backend systems with .NET Core, Azure Functions, App Services, and
-                            Service Bus, delivering fault-tolerant, scalable enterprise integrations</li>
-                        <li>Resolved critical ASB message loss by redesigning API architecture, improving delivery
-                            reliability by <strong>31%</strong>. Introduced a non-blocking retry mechanism, boosting
-                            resilience by <strong>70%</strong> for latency-sensitive endpoints</li>
-                        <li>Integrated Azure Application Insights and Log Analytics for centralized telemetry and
-                            real-time diagnostics</li>
-                        <li>Modernized HERE Maps integration, aligning with 2025 API standards and implementing secure
-                            authentication</li>
-                        <li>Engineered secure auth systems in .NET 6 using OAuth 2.0, OIDC, and MSAL, supporting
-                            scalable identity flows</li>
-                        <li>Developed a scalable URL shortener and a real-time service vehicle availability system</li>
-                        <li>Achieved <strong>100% automated deployment</strong> via a robust CI/CD pipeline,
-                            accelerating releases and eliminating manual errors</li>
-                        <li>Implemented Azure Key Vault for secure credential management, enhancing compliance and
-                            simplifying access control</li>
-                        <li>Optimized .NET Core deployments, cutting deployment time by <strong>30%</strong> and
-                            increasing frequency by <strong>25%</strong></li>
+                        <li><strong>Enterprise Integration & Middleware Leadership:</strong> Architected and maintained
+                            35+ backend middleware interfaces for a leading European commercial vehicle manufacturer
+                            using .NET and Azure, ensuring high availability, secure data exchange, and global
+                            scalability. Served as the primary knowledge authority across the middleware landscape,
+                            driving end-to-end delivery from design to deployment and support</li>
+                        <li><strong>Real-Time Systems & Messaging Architecture:</strong> Designed a backend integration
+                            system connecting a technician geolocation mobile app with enterprise CRM via Azure Service
+                            Bus, enabling real-time location and login metadata sync for enhanced field visibility.
+                            Resolved critical message loss issues by redesigning API architecture, achieving a
+                            <strong>31% improvement</strong> in delivery reliability. Implemented a non-blocking retry
+                            mechanism in API routers, boosting resilience by <strong>70%</strong> for latency-sensitive
+                            endpoints impacted by third-party failures
+                        </li>
+                        <li><strong>Cloud-Native & Scalable Backend Solutions:</strong> Built microservices-based
+                            systems using .NET Core, Azure Functions, App Services, and Service Bus, ensuring fault
+                            tolerance and seamless enterprise integration. Engineered secure authentication systems with
+                            OAuth 2.0, OpenID Connect, and MSAL, delivering robust access control and low-latency data
+                            delivery across distributed systems</li>
+                        <li><strong>DevOps & Deployment Optimization:</strong> Achieved <strong>100% automated
+                                deployment</strong> across all components via a robust CI/CD pipeline, enhancing release
+                            velocity and reducing manual errors. Optimized deployment strategies for .NET Core apps,
+                            resulting in a <strong>30% reduction</strong> in deployment time and <strong>25%
+                                increase</strong> in frequency</li>
+                        <li><strong>Security & Observability:</strong> Implemented Azure Key Vault for secure credential
+                            management, improving compliance and simplifying access control. Integrated Azure
+                            Application Insights and Log Analytics for centralized telemetry and real-time monitoring
+                        </li>
+                        <li><strong>Innovation & Product Development:</strong> Designed and developed a scalable URL
+                            shortening service and a real-time service vehicle availability system. Modernized HERE Maps
+                            integration to align with 2025 API standards, incorporating secure authentication and
+                            future-proofing location services</li>
+                        <li><strong>Stakeholder Engagement & Documentation:</strong> Spearheaded client communication
+                            and authored comprehensive technical documentation, ensuring clear alignment, seamless
+                            delivery, and effective knowledge transfer</li>
                     </ul>
                 </div>
 
@@ -342,6 +352,5 @@
         <p>© 2025 Faisal Andrabi. All rights reserved.</p>
     </footer>
 </body>
-
 
 </html>
