--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
             <span class="contact-item">📧 faisalbinsyed@gmail.com</span>
             <span class="contact-item">📞 +91-9070514679</span>
             <span class="contact-item">📍 Srinagar, JK, India</span>
+            <span class="contact-item">🔗 <a href="https://www.linkedin.com/in/faisalbinsyed/"
+                    target="_blank">LinkedIn</a></span>
+            <span class="contact-item">💻 <a href="https://github.com/faisalandrabi" target="_blank">GitHub</a></span>
             <span class="contact-item">🌐 <a href="https://faisalandrabi.is-a.dev/"
                     target="_blank">faisalandrabi.is-a.dev</a></span>
         </div>
